fixed span not being inline with p on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,7 +50,7 @@ a {
 
 
 .hover-underline-dark-animation {
-  display: inline-block;
+  /* display: inline-block; */
   position: relative;
 }
 
@@ -74,7 +74,7 @@ a {
 
 
 .hover-underline-animation {
-  display: inline-block;
+  /* display: inline-block; */
   position: relative;
 }
 
